fixed command box overflow

--- a/assets/style/command.css
+++ b/assets/style/command.css
@@ -9,4 +9,5 @@
   width: 100%;
   height: 36px;
   padding: 0 18px;
+  padding-right: 428px;
 }
